--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==3.1.1
 gunicorn==20.0.4
 psycopg2==2.8.6
+pydub==0.24.1
 pytz==2020.1
 SpeechRecognition==3.8.1
 sqlparse==0.3.1
