--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ asgiref==3.2.10
 dj-database-url==0.5.0
 Django==3.1.1
 gunicorn==20.0.4
+joblib==0.17.0
+numpy==1.19.3
+pandas==1.1.4
 psycopg2==2.8.6
 pydub==0.24.1
+python-dateutil==2.8.1
 pytz==2020.1
 SpeechRecognition==3.8.1
 sqlparse==0.3.1
