--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.2.10
+boto3==1.16.22
+botocore==1.19.22
 dj-database-url==0.5.0
 Django==3.1.1
+django-storages==1.10.1
 gunicorn==20.0.4
+jmespath==0.10.0
 joblib==0.17.0
 numpy==1.19.3
 pandas==1.1.4
@@ -10,8 +14,10 @@ pydub==0.24.1
 PyStemmer==2.0.1
 python-dateutil==2.8.1
 pytz==2020.1
-scipy==1.5.3
+s3transfer==0.3.3
 six==1.15.0
 SpeechRecognition==3.8.1
+sqlparse==0.3.1
 threadpoolctl==2.1.0
+urllib3==1.26.2
 whitenoise==5.2.0
